@@ -1,3 +1,9 @@
+2015-12-10 Siddharth Ravikumar <sravik@bgsu.edu>
+
+	* combox/gui.py (ComboxConfigDialog.apply): now writes the
+	configuration to disk in the default combox configuration
+	directory.
+
 2015-12-03 Siddharth Ravikumar <sravik@bgsu.edu>
 
 	* combox/gui.py: input validation kinda done + added status bar.
